--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
+Pillow==9.1.0
 pycparser==2.21
 SQLAlchemy==1.4.36
 Werkzeug==2.1.2
